added finetuning for clip

--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -28,8 +28,11 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"../data/questions/train_sampled_questions_50000.json\") as f:\n",
-    "   questions = list(json.load(f).items())"
+    "with open(\"../data/questions/val_sampled_questions_50000.json\") as f:\n",
+    "   questions = list(json.load(f).items())\n",
+    "\n",
+    "with open(\"../data/sceneGraphs/val_sceneGraphs.json\") as f:\n",
+    "    scene_graphs = json.load(f)"
    ]
   },
   {
@@ -61,13 +64,14 @@
     "           object[\"x\"] + object[\"w\"] <= scene_graph[\"width\"] and object[\"y\"] + object[\"h\"] <= scene_graph[\"height\"]\n",
     "\n",
     "for qid, question in questions:\n",
+    "    scene_graph = scene_graphs[question[\"imageId\"]]\n",
     "    for op in question[\"semantic\"]:\n",
     "        operation = op[\"operation\"]\n",
     "        argument = op[\"argument\"].strip()\n",
-    "        objects = question[\"sceneGraph\"][\"objects\"]\n",
+    "        objects = scene_graph[\"objects\"]\n",
     "\n",
     "        if operation == \"select\" and argument != \"scene\" and not argument.endswith(\"(-)\"):\n",
-    "            matching_objects = [(oid, objects[oid]) for oid in argument.split(\"(\")[1][:-1].split(\",\") if object_within_image_bounds(question[\"sceneGraph\"], objects[oid])] \n",
+    "            matching_objects = [(oid, objects[oid]) for oid in argument.split(\"(\")[1][:-1].split(\",\") if object_within_image_bounds(scene_graph, objects[oid])] \n",
     "            if len(matching_objects) > 0:\n",
     "                oid, object = random.choice(matching_objects)\n",
     "                object[\"object_id\"] = oid\n",
@@ -77,14 +81,14 @@
     "                        \"image_id\": question[\"imageId\"],\n",
     "                        \"class\": argument.split(\"(\")[0].strip(),\n",
     "                        \"object\": object,\n",
-    "                        \"object_size\": compute_object_size(question[\"sceneGraph\"], object),\n",
+    "                        \"object_size\": compute_object_size(scene_graph, object),\n",
     "                        \"y\": True\n",
     "                    })  \n",
     "\n",
     "        elif operation.startswith(\"filter\"):\n",
     "            attr = ' '.join(operation.split(' ')[1:]) if operation != \"filter\" else \"any\"\n",
     "            attr_value = argument[4:-1] if argument.startswith('not(') else argument\n",
-    "            objects_with_attr = [(oid, o) for oid, o in objects.items() if attr_value in o[\"attributes\"] and object_within_image_bounds(question[\"sceneGraph\"],o)]\n",
+    "            objects_with_attr = [(oid, o) for oid, o in objects.items() if attr_value in o[\"attributes\"] and object_within_image_bounds(scene_graph,o)]\n",
     "            if len(objects_with_attr) > 0 and attr not in [\"hposition\", \"vposition\"]:\n",
     "                oid, object = random.choice(objects_with_attr)\n",
     "                object[\"object_id\"] = oid\n",
@@ -94,14 +98,14 @@
     "                        \"image_id\": question[\"imageId\"],\n",
     "                        \"attr_value\": attr_value,\n",
     "                        \"object\": object,\n",
-    "                        \"object_size\": compute_object_size(question[\"sceneGraph\"], object),\n",
+    "                        \"object_size\": compute_object_size(scene_graph, object),\n",
     "                        \"y\": True\n",
     "                    })\n",
     "\n",
     "        elif operation.startswith(\"verify\"):\n",
     "            attr = ' '.join(operation.split(' ')[1:]) if operation != \"verify\" else \"any\"\n",
     "            attr_value = argument\n",
-    "            objects_with_attr = [(oid, o) for oid, o in objects.items() if attr_value in o[\"attributes\"] and object_within_image_bounds(question[\"sceneGraph\"], o)]\n",
+    "            objects_with_attr = [(oid, o) for oid, o in objects.items() if attr_value in o[\"attributes\"] and object_within_image_bounds(scene_graph, o)]\n",
     "            if len(objects_with_attr) > 0 and attr not in [\"hposition\", \"vposition\"]:\n",
     "                oid, object = random.choice(objects_with_attr)\n",
     "                object[\"object_id\"] = oid\n",
@@ -111,14 +115,14 @@
     "                        \"image_id\": question[\"imageId\"],\n",
     "                        \"attr_value\": attr_value,\n",
     "                        \"object\": object,\n",
-    "                        \"object_size\": compute_object_size(question[\"sceneGraph\"], object),\n",
+    "                        \"object_size\": compute_object_size(scene_graph, object),\n",
     "                        \"y\": True\n",
     "                    })\n",
     "                \n",
     "        elif operation.startswith(\"choose \") and argument != \"\":\n",
     "            attr = \" \".join(operation.split(\" \")[1:])\n",
     "            attr_value = random.choice([argument.split(\"|\")[0], argument.split(\"|\")[1]])\n",
-    "            objects_with_attr = [(oid, o) for oid, o in objects.items() if attr_value in o[\"attributes\"] and object_within_image_bounds(question[\"sceneGraph\"], o)]\n",
+    "            objects_with_attr = [(oid, o) for oid, o in objects.items() if attr_value in o[\"attributes\"] and object_within_image_bounds(scene_graph, o)]\n",
     "            if len(objects_with_attr) > 0 and attr not in [\"hposition\", \"vposition\"]:\n",
     "                oid, object = random.choice(objects_with_attr)\n",
     "                object[\"object_id\"] = oid\n",
@@ -128,7 +132,7 @@
     "                        \"image_id\": question[\"imageId\"],\n",
     "                        \"attr_value\": attr_value,\n",
     "                        \"object\": object,\n",
-    "                        \"object_size\": compute_object_size(question[\"sceneGraph\"], object),\n",
+    "                        \"object_size\": compute_object_size(scene_graph, object),\n",
     "                        \"y\": True\n",
     "                    })\n",
     "                \n",
@@ -139,7 +143,7 @@
     "\n",
     "            if target_object != \"-\":\n",
     "                if position == 'object':\n",
-    "                    matching_objects = [(oid, o) for oid, o in objects.items() if any(r[\"object\"] == target_object and r[\"name\"] == relation_type for r in o[\"relations\"]) and object_within_image_bounds(question[\"sceneGraph\"], o)]\n",
+    "                    matching_objects = [(oid, o) for oid, o in objects.items() if any(r[\"object\"] == target_object and r[\"name\"] == relation_type for r in o[\"relations\"]) and object_within_image_bounds(scene_graph, o)]\n",
     "                    if len(matching_objects) > 0:\n",
     "                        oid0, object0 = random.choice(matching_objects)\n",
     "                        object0[\"object_id\"] = oid0\n",
@@ -153,14 +157,14 @@
     "                                \"rel\": relation_type,\n",
     "                                \"object0\": object0,\n",
     "                                \"object1\": object1,\n",
-    "                                \"object0_size\": compute_object_size(question[\"sceneGraph\"], object0),\n",
-    "                                \"object1_size\": compute_object_size(question[\"sceneGraph\"], object1),\n",
+    "                                \"object0_size\": compute_object_size(scene_graph, object0),\n",
+    "                                \"object1_size\": compute_object_size(scene_graph, object1),\n",
     "                                \"y\": True\n",
     "                            })\n",
     "                        \n",
     "                else:\n",
     "                    matching_oids = [r[\"object\"] for r in objects[target_object][\"relations\"] if r[\"name\"] == relation_type]\n",
-    "                    matching_objects = [(oid, objects[oid]) for oid in matching_oids if object_within_image_bounds(question[\"sceneGraph\"], objects[oid])]\n",
+    "                    matching_objects = [(oid, objects[oid]) for oid in matching_oids if object_within_image_bounds(scene_graph, objects[oid])]\n",
     "                    if len(matching_objects) > 0:\n",
     "                        object0 = objects[target_object]\n",
     "                        object0[\"object_id\"] = target_object\n",
@@ -174,8 +178,8 @@
     "                            \"rel\": relation_type,\n",
     "                            \"object0\": object0,\n",
     "                            \"object1\": object1,\n",
-    "                            \"object0_size\": compute_object_size(question[\"sceneGraph\"], object0),\n",
-    "                            \"object1_size\": compute_object_size(question[\"sceneGraph\"], object1),\n",
+    "                            \"object0_size\": compute_object_size(scene_graph, object0),\n",
+    "                            \"object1_size\": compute_object_size(scene_graph, object1),\n",
     "                            \"y\": True\n",
     "                        })"
    ]
@@ -247,10 +251,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-07 13:19:02.230968: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-05-07 13:19:02.255316: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-29 18:44:45.627671: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-05-29 18:44:45.650665: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-07 13:19:02.582046: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-05-29 18:44:45.977054: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -301,13 +305,22 @@
     "        \"bbox_y\": joined_bbox[\"y\"],\n",
     "        \"bbox_w\": joined_bbox[\"w\"],\n",
     "        \"bbox_h\": joined_bbox[\"h\"],\n",
-    "        \"bbox_size\": compute_object_size(s[\"question\"][\"sceneGraph\"], joined_bbox),\n",
+    "        \"bbox_size\": compute_object_size(scene_graphs[s[\"question\"][\"imageId\"]], joined_bbox),\n",
     "        \"object0_name\": s[\"object0\"][\"name\"],\n",
     "        \"object1_name\": s[\"object1\"][\"name\"],\n",
     "        \"rel\": s[\"rel\"],\n",
     "        \"y\": s[\"y\"]\n",
     "    })\n",
     "rel_samples_df = pd.DataFrame.from_dict(rel_samples_flat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rel_samples_df.to_pickle(\"../data/finetuning/val_rel_samples_50k.pkl\")"
    ]
   },
   {
@@ -344,18 +357,7 @@
      "output_type": "stream",
      "text": [
       "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3483.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "load checkpoint from ../data/models/xvlm_original_4m/itr_coco/checkpoint_best.pth\n",
-      "missing_keys:  []\n",
-      "unexpected_keys:  []\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -365,15 +367,14 @@
     "    del model\n",
     "torch.cuda.empty_cache()\n",
     "\n",
-    "# from models.clip_model import CLIPModel\n",
-    "# model = CLIPModel(gpu)\n",
+    "from model.clip_model import CLIPModel\n",
+    "model = CLIPModel(gpu)\n",
     "\n",
-    "from model.xvlm_itr_coco_model import XVLMModel\n",
-    "model = XVLMModel(gpu)"
+    "# from model.xvlm_itr_coco_model import XVLMModel\n",
+    "# model = XVLMModel(gpu)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,7 +382,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,27 +404,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 84.926%\n",
-      "Precision: 0.861\n",
-      "Recall: 0.833\n"
+      "Accuracy: 90.107%\n",
+      "Precision: 0.938\n",
+      "Recall: 0.859\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': tensor(84.9264, device='cuda:0'),\n",
-       " 'precision': tensor(0.8610, device='cuda:0'),\n",
-       " 'recall': tensor(0.8330, device='cuda:0')}"
+       "{'accuracy': tensor(90.1065, device='cuda:0'),\n",
+       " 'precision': tensor(0.9378, device='cuda:0'),\n",
+       " 'recall': tensor(0.8591, device='cuda:0')}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -446,41 +445,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from prompt_dataset import PromptDataset\n",
     "\n",
     "attr_dataset = PromptDataset(attr_samples_df, prompt_transform=lambda e: [\n",
-    "    f\"{e['attr_value']} {e['object_name']}\", \n",
-    "    f\"{e['object_name']}\"\n",
+    "    f\"a bad photo of a {e['attr_value']} {e['object_name']}\", \n",
+    "    f\"a bad photo of a {e['object_name']}\"\n",
     "], img_size=model.img_size, mode=\"pad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 49.728%\n",
-      "Precision: 0.496\n",
-      "Recall: 0.300\n"
+      "Accuracy: 67.051%\n",
+      "Precision: 0.721\n",
+      "Recall: 0.556\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': tensor(49.7283, device='cuda:0'),\n",
-       " 'precision': tensor(0.4955, device='cuda:0'),\n",
-       " 'recall': tensor(0.2999, device='cuda:0')}"
+       "{'accuracy': tensor(67.0513, device='cuda:0'),\n",
+       " 'precision': tensor(0.7214, device='cuda:0'),\n",
+       " 'recall': tensor(0.5556, device='cuda:0')}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +492,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -502,15 +500,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from prompt_dataset import PromptDataset\n",
     "\n",
     "rel_dataset = PromptDataset(rel_samples_df, prompt_transform=lambda e: [\n",
-    "    f\"{e['object0_name']} {e['rel']} {e['object1_name']}\", \n",
-    "    f\"{e['object0_name']} and {e['object1_name']}\"\n",
+    "    f\"a bad photo of a {e['object0_name']} {e['rel']} a {e['object1_name']}\", \n",
+    "    f\"a bad photo of a {e['object0_name']} and a {e['object1_name']}\"\n",
     "], img_size=model.img_size, mode=\"scale\")"
    ]
   },
@@ -523,17 +521,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 49.194%\n",
-      "Precision: 0.492\n",
-      "Recall: 0.477\n"
+      "Accuracy: 59.302%\n",
+      "Precision: 0.574\n",
+      "Recall: 0.722\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': tensor(49.1941, device='cuda:0'),\n",
-       " 'precision': tensor(0.4917, device='cuda:0'),\n",
-       " 'recall': tensor(0.4765, device='cuda:0')}"
+       "{'accuracy': tensor(59.3022, device='cuda:0'),\n",
+       " 'precision': tensor(0.5740, device='cuda:0'),\n",
+       " 'recall': tensor(0.7218, device='cuda:0')}"
       ]
      },
      "execution_count": 11,
@@ -549,7 +547,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -644,7 +641,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
