addition of llama model

--- a/notebooks/mlm_for_relations.ipynb
+++ b/notebooks/mlm_for_relations.ipynb
@@ -61,10 +61,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "llama.cpp: loading model from ../data/models/llama/7B/ggml-model-f16.bin\n",
+      "llama_model_load_internal: format     = ggjt v1 (pre #1405)\n",
+      "llama_model_load_internal: n_vocab    = 32000\n",
+      "llama_model_load_internal: n_ctx      = 512\n",
+      "llama_model_load_internal: n_embd     = 4096\n",
+      "llama_model_load_internal: n_mult     = 256\n",
+      "llama_model_load_internal: n_head     = 32\n",
+      "llama_model_load_internal: n_layer    = 32\n",
+      "llama_model_load_internal: n_rot      = 128\n",
+      "llama_model_load_internal: ftype      = 1 (mostly F16)\n",
+      "llama_model_load_internal: n_ff       = 11008\n",
+      "llama_model_load_internal: n_parts    = 1\n",
+      "llama_model_load_internal: model size = 7B\n",
+      "llama_model_load_internal: ggml ctx size =    0.07 MB\n",
+      "llama_model_load_internal: mem required  = 14645.09 MB (+ 1026.00 MB per state)\n",
+      ".\n",
+      "AVX = 1 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 1 | NEON = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | WASM_SIMD = 0 | BLAS = 0 | SSE3 = 1 | VSX = 0 | \n",
+      "llama_init_from_file: kv self size  =  256.00 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_cpp import Llama\n",
+    "llm = Llama(model_path=\"../data/models/llama/7B/ggml-model-f16.bin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Llama.generate: prefix-match hit\n",
+      "\n",
+      "llama_print_timings:        load time =  4088.89 ms\n",
+      "llama_print_timings:      sample time =     1.75 ms /     6 runs   (    0.29 ms per token)\n",
+      "llama_print_timings: prompt eval time =     0.00 ms /     1 tokens (    0.00 ms per token)\n",
+      "llama_print_timings:        eval time =  1451.13 ms /     6 runs   (  241.85 ms per token)\n",
+      "llama_print_timings:       total time =  1461.56 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'chatcmpl-3f222a36-3efe-4988-862c-9849eddb59e7',\n",
+       " 'object': 'chat.completion',\n",
+       " 'created': 1686400352,\n",
+       " 'model': '../data/models/llama/7B/ggml-model-f16.bin',\n",
+       " 'choices': [{'index': 0,\n",
+       "   'message': {'role': 'assistant', 'content': ' No.'},\n",
+       "   'finish_reason': 'stop'}],\n",
+       " 'usage': {'prompt_tokens': 23, 'completion_tokens': 6, 'total_tokens': 29}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.create_chat_completion(messages=[{\n",
+    "    \"role\": \"user\",\n",
+    "    \"content\": \"Does this phrase make sense: \\\"a car driving on a road\\\"?\"\n",
+    "}], max_tokens=60, top_k=1)"
+   ]
   }
  ],
  "metadata": {
